--- a/app/src/at-daiho/res/layout/activity_login.xml
+++ b/app/src/at-daiho/res/layout/activity_login.xml
@@ -11,123 +11,123 @@
 
         <ImageView
             android:id="@+id/headerImage"
-            app:layout_constraintTop_toTopOf="parent"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:src="@mipmap/bg_login_header"
             app:layout_constraintDimensionRatio="375:285"
-            android:src="@mipmap/bg_login_header"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/logo"
             android:layout_width="wrap_content"
             android:layout_height="28dp"
-            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginLeft="@dimen/activityControlMargin"
             android:layout_marginTop="60dp"
+            android:src="@mipmap/ic_logo"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginLeft="@dimen/loginActivityControlMargin"
-            android:src="@mipmap/ic_logo"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:layout_height="32dp"
             android:layout_width="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/logo"
+            android:layout_height="32dp"
             android:layout_marginTop="45dp"
-            app:layout_constraintLeft_toLeftOf="@id/logo"
             android:text="@string/loginActivityWelcomeback"
-            android:textSize="@dimen/textSize24"
             android:textColor="@color/black"
-            android:textStyle="bold"/>
+            android:textSize="@dimen/textSize24"
+            android:textStyle="bold"
+            app:layout_constraintLeft_toLeftOf="@id/logo"
+            app:layout_constraintTop_toBottomOf="@id/logo" />
 
         <TextView
             android:id="@+id/tvHint"
-            android:layout_height="20dp"
             android:layout_width="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/headerImage"
+            android:layout_height="20dp"
             android:layout_marginTop="22dp"
-            app:layout_constraintLeft_toLeftOf="@id/logo"
             android:text="@string/loginActivityPleaseLoginToContinue"
             android:textColor="@color/grayD8D8D8"
-            android:textSize="@dimen/textSize14"/>
+            android:textSize="@dimen/textSize14"
+            app:layout_constraintLeft_toLeftOf="@id/logo"
+            app:layout_constraintTop_toBottomOf="@id/headerImage" />
 
         <TextView
             android:id="@+id/tvEmailHeader"
-            android:layout_height="22dp"
             android:layout_width="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/tvHint"
+            android:layout_height="22dp"
             android:layout_marginTop="47dp"
-            app:layout_constraintLeft_toLeftOf="@id/logo"
             android:text="@string/loginActivityEmailAddress"
             android:textColor="@color/grayD8D8D8"
-            android:textSize="@dimen/textSize14"/>
+            android:textSize="@dimen/textSize14"
+            app:layout_constraintLeft_toLeftOf="@id/logo"
+            app:layout_constraintTop_toBottomOf="@id/tvHint" />
 
         <EditText
             android:id="@+id/etEmail"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/tvEmailHeader"
+            android:layout_marginLeft="@dimen/activityControlMargin"
             android:layout_marginTop="15dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginLeft="@dimen/loginActivityControlMargin"
-            android:layout_marginRight="@dimen/loginActivityControlMargin"
+            android:layout_marginRight="@dimen/activityControlMargin"
             android:inputType="textEmailAddress"
+            android:text="@string/loginActivityEmailAddressPlaceHolder"
             android:textColor="@color/black"
             android:textSize="@dimen/textSize14"
             android:textStyle="bold"
-            android:text="@string/loginActivityEmailAddressPlaceHolder"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvEmailHeader"
             tools:ignore="Autofill,LabelFor" />
 
         <TextView
             android:id="@+id/tvPasswordHeader"
-            android:layout_height="22dp"
             android:layout_width="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/etEmail"
+            android:layout_height="22dp"
             android:layout_marginTop="47dp"
-            app:layout_constraintLeft_toLeftOf="@id/logo"
             android:text="@string/loginActivityPassword"
             android:textColor="@color/grayD8D8D8"
-            android:textSize="@dimen/textSize14"/>
+            android:textSize="@dimen/textSize14"
+            app:layout_constraintLeft_toLeftOf="@id/logo"
+            app:layout_constraintTop_toBottomOf="@id/etEmail" />
 
         <TextView
-            android:layout_height="22dp"
             android:layout_width="wrap_content"
-            app:layout_constraintTop_toTopOf="@id/tvPasswordHeader"
-            app:layout_constraintRight_toRightOf="@id/etPassword"
+            android:layout_height="22dp"
             android:text="@string/loginActivityForgotPassword"
             android:textColor="@color/grayD8D8D8"
-            android:textSize="@dimen/textSize14"/>
+            android:textSize="@dimen/textSize14"
+            app:layout_constraintRight_toRightOf="@id/etPassword"
+            app:layout_constraintTop_toTopOf="@id/tvPasswordHeader" />
 
         <EditText
             android:id="@+id/etPassword"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/tvPasswordHeader"
+            android:layout_marginLeft="@dimen/activityControlMargin"
             android:layout_marginTop="15dp"
+            android:layout_marginRight="@dimen/activityControlMargin"
+            android:inputType="textPassword"
+            android:text="@string/loginActivityEmailAddress"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:inputType="textPassword"
-            android:layout_marginLeft="@dimen/loginActivityControlMargin"
-            android:layout_marginRight="@dimen/loginActivityControlMargin"
-            android:text="@string/loginActivityEmailAddress"
+            app:layout_constraintTop_toBottomOf="@id/tvPasswordHeader"
             tools:ignore="Autofill,LabelFor" />
 
         <TextView
             android:id="@+id/btLogin"
-            android:layout_height="50dp"
             android:layout_width="0dp"
-            app:layout_constraintTop_toBottomOf="@id/etPassword"
+            android:layout_height="50dp"
+            android:layout_marginLeft="@dimen/activityControlMargin"
             android:layout_marginTop="30dp"
+            android:layout_marginRight="@dimen/activityControlMargin"
+            android:background="@drawable/round_button"
+            android:gravity="center"
+            android:text="@string/loginActivityLoginButtonTitle"
+            android:textColor="@color/white"
+            android:textSize="@dimen/textSize16"
+            android:textStyle="bold"
+            app:layout_constraintCircleRadius="10dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginLeft="@dimen/loginActivityControlMargin"
-            android:layout_marginRight="@dimen/loginActivityControlMargin"
-            app:layout_constraintCircleRadius="10dp"
-            android:background="@drawable/round_button"
-            android:text="@string/loginActivityLoginButtonTitle"
-            android:textSize="@dimen/textSize16"
-            android:textColor="@color/white"
-            android:textStyle="bold"
-            android:gravity="center"/>
+            app:layout_constraintTop_toBottomOf="@id/etPassword" />
 
         <TextView
             android:id="@+id/tvNewScratch"
