--- a/app/src/at-daiho/res/layout/activity_signup.xml
+++ b/app/src/at-daiho/res/layout/activity_signup.xml
@@ -11,169 +11,169 @@
 
         <ImageView
             android:id="@+id/headerImage"
-            app:layout_constraintTop_toTopOf="parent"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:src="@mipmap/bg_login_header"
             app:layout_constraintDimensionRatio="375:285"
-            android:src="@mipmap/bg_login_header"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/logo"
             android:layout_width="wrap_content"
             android:layout_height="28dp"
-            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginLeft="@dimen/activityControlMargin"
             android:layout_marginTop="60dp"
+            android:src="@mipmap/ic_logo"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginLeft="@dimen/loginActivityControlMargin"
-            android:src="@mipmap/ic_logo"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/logo"
+            android:layout_height="wrap_content"
             android:layout_marginTop="45dp"
-            app:layout_constraintLeft_toLeftOf="@id/logo"
             android:text="@string/signUpActivityStartFromScratch"
-            android:textSize="@dimen/textSize24"
             android:textColor="@color/black"
-            android:textStyle="bold"/>
+            android:textSize="@dimen/textSize24"
+            android:textStyle="bold"
+            app:layout_constraintLeft_toLeftOf="@id/logo"
+            app:layout_constraintTop_toBottomOf="@id/logo" />
 
         <TextView
             android:id="@+id/tvHint"
-            android:layout_height="20dp"
             android:layout_width="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/headerImage"
+            android:layout_height="20dp"
             android:layout_marginTop="22dp"
-            app:layout_constraintLeft_toLeftOf="@id/logo"
             android:text="@string/signUpActivityCreateAccountToContinue"
             android:textColor="@color/grayD8D8D8"
-            android:textSize="@dimen/textSize14"/>
+            android:textSize="@dimen/textSize14"
+            app:layout_constraintLeft_toLeftOf="@id/logo"
+            app:layout_constraintTop_toBottomOf="@id/headerImage" />
 
         <TextView
             android:id="@+id/tvFullNameHeader"
-            android:layout_height="22dp"
             android:layout_width="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/tvHint"
+            android:layout_height="22dp"
             android:layout_marginTop="47dp"
-            app:layout_constraintLeft_toLeftOf="@id/logo"
             android:text="@string/signUpActivityFullName"
             android:textColor="@color/grayD8D8D8"
-            android:textSize="@dimen/textSize14"/>
+            android:textSize="@dimen/textSize14"
+            app:layout_constraintLeft_toLeftOf="@id/logo"
+            app:layout_constraintTop_toBottomOf="@id/tvHint" />
 
         <EditText
             android:id="@+id/etFullName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/tvFullNameHeader"
+            android:layout_marginLeft="@dimen/activityControlMargin"
             android:layout_marginTop="15dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginLeft="@dimen/loginActivityControlMargin"
-            android:layout_marginRight="@dimen/loginActivityControlMargin"
+            android:layout_marginRight="@dimen/activityControlMargin"
             android:inputType="textPersonName"
+            android:text="@string/signUpActivityFullNamePlaceHolder"
             android:textColor="@color/black"
             android:textSize="@dimen/textSize14"
             android:textStyle="bold"
-            android:text="@string/signUpActivityFullNamePlaceHolder"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvFullNameHeader"
             tools:ignore="Autofill,LabelFor" />
 
         <TextView
             android:id="@+id/tvEmailHeader"
-            android:layout_height="22dp"
             android:layout_width="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/etFullName"
+            android:layout_height="22dp"
             android:layout_marginTop="47dp"
-            app:layout_constraintLeft_toLeftOf="@id/logo"
             android:text="@string/loginActivityEmailAddress"
             android:textColor="@color/grayD8D8D8"
-            android:textSize="@dimen/textSize14"/>
+            android:textSize="@dimen/textSize14"
+            app:layout_constraintLeft_toLeftOf="@id/logo"
+            app:layout_constraintTop_toBottomOf="@id/etFullName" />
 
         <EditText
             android:id="@+id/etEmail"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/tvEmailHeader"
+            android:layout_marginLeft="@dimen/activityControlMargin"
             android:layout_marginTop="15dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginLeft="@dimen/loginActivityControlMargin"
-            android:layout_marginRight="@dimen/loginActivityControlMargin"
+            android:layout_marginRight="@dimen/activityControlMargin"
             android:inputType="textEmailAddress"
+            android:text="@string/loginActivityEmailAddressPlaceHolder"
             android:textColor="@color/black"
             android:textSize="@dimen/textSize14"
             android:textStyle="bold"
-            android:text="@string/loginActivityEmailAddressPlaceHolder"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvEmailHeader"
             tools:ignore="Autofill,LabelFor" />
 
         <TextView
             android:id="@+id/tvPasswordHeader"
-            android:layout_height="22dp"
             android:layout_width="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/etEmail"
+            android:layout_height="22dp"
             android:layout_marginTop="47dp"
-            app:layout_constraintLeft_toLeftOf="@id/logo"
             android:text="@string/loginActivityPassword"
             android:textColor="@color/grayD8D8D8"
-            android:textSize="@dimen/textSize14"/>
+            android:textSize="@dimen/textSize14"
+            app:layout_constraintLeft_toLeftOf="@id/logo"
+            app:layout_constraintTop_toBottomOf="@id/etEmail" />
 
         <EditText
             android:id="@+id/etPassword"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/tvPasswordHeader"
+            android:layout_marginLeft="@dimen/activityControlMargin"
             android:layout_marginTop="15dp"
+            android:layout_marginRight="@dimen/activityControlMargin"
+            android:inputType="textPassword"
+            android:text="@string/loginActivityEmailAddress"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:inputType="textPassword"
-            android:layout_marginLeft="@dimen/loginActivityControlMargin"
-            android:layout_marginRight="@dimen/loginActivityControlMargin"
-            android:text="@string/loginActivityEmailAddress"
+            app:layout_constraintTop_toBottomOf="@id/tvPasswordHeader"
             tools:ignore="Autofill,LabelFor" />
 
         <TextView
             android:id="@+id/btCreateAccount"
-            android:layout_height="50dp"
             android:layout_width="0dp"
-            app:layout_constraintTop_toBottomOf="@id/etPassword"
+            android:layout_height="50dp"
+            android:layout_marginLeft="@dimen/activityControlMargin"
             android:layout_marginTop="30dp"
+            android:layout_marginRight="@dimen/activityControlMargin"
+            android:background="@drawable/round_button"
+            android:gravity="center"
+            android:text="@string/loginActivityCreateAccountButtonTitle"
+            android:textColor="@color/white"
+            android:textSize="@dimen/textSize16"
+            android:textStyle="bold"
+            app:layout_constraintCircleRadius="10dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginLeft="@dimen/loginActivityControlMargin"
-            android:layout_marginRight="@dimen/loginActivityControlMargin"
-            app:layout_constraintCircleRadius="10dp"
-            android:background="@drawable/round_button"
-            android:text="@string/loginActivityCreateAccountButtonTitle"
-            android:textSize="@dimen/textSize16"
-            android:textColor="@color/white"
-            android:textStyle="bold"
-            android:gravity="center"/>
+            app:layout_constraintTop_toBottomOf="@id/etPassword" />
 
         <TextView
             android:id="@+id/tvNewScratch"
-            android:layout_height="22dp"
             android:layout_width="174dp"
-            app:layout_constraintTop_toBottomOf="@id/btCreateAccount"
+            android:layout_height="22dp"
             android:layout_marginTop="30dp"
+            android:gravity="center"
+            android:text="@string/signUpActivityAlreadyHaveAnAccount"
+            android:textColor="@color/grayD8D8D8"
+            android:textSize="@dimen/textSize14"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:text="@string/signUpActivityAlreadyHaveAnAccount"
-            android:textSize="@dimen/textSize14"
-            android:textColor="@color/grayD8D8D8"
-            android:gravity="center"/>
+            app:layout_constraintTop_toBottomOf="@id/btCreateAccount" />
 
         <TextView
-            android:layout_height="18dp"
             android:layout_width="174dp"
-            app:layout_constraintTop_toBottomOf="@id/tvNewScratch"
+            android:layout_height="18dp"
             android:layout_marginTop="5dp"
-            app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="10dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
+            android:gravity="center"
             android:text="@string/signUpActivityLoginHereButtonTitle"
+            android:textColor="@color/green30BE76"
             android:textSize="@dimen/textSize14"
             android:textStyle="bold"
-            android:textColor="@color/green30BE76"
-            android:gravity="center"/>
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvNewScratch" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
