--- a/app/src/at-hauha/res/layout/fragment_login.xml
+++ b/app/src/at-hauha/res/layout/fragment_login.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="wrap_content"
+    android:layout_height="730dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_width="wrap_content"
+        android:layout_height="0dp">
 
         <ImageView
             android:id="@+id/imgBackGround"
@@ -62,6 +63,7 @@
             app:layout_constraintTop_toBottomOf="@+id/txtContinue" />
 
         <EditText
+            android:hint="@string/edittext_hint_email_address"
             android:id="@+id/edtEmail"
             android:layout_width="@dimen/width_324"
             android:layout_height="@dimen/height_64"
@@ -69,7 +71,9 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/txtBio"
-            app:layout_constraintTop_toBottomOf="@+id/txtBio" />
+            app:layout_constraintTop_toBottomOf="@+id/txtBio"
+            android:inputType="textEmailAddress"
+            tools:ignore="Autofill" />
 
         <TextView
             android:id="@+id/txtPrivateInfo"
@@ -92,6 +96,7 @@
             app:layout_constraintTop_toBottomOf="@+id/edtEmail" />
 
         <EditText
+            android:hint="@string/edittext_hint_password"
             android:id="@+id/edtPassword"
             android:layout_width="@dimen/width_324"
             android:layout_height="@dimen/height_64"
@@ -101,14 +106,15 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.465"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txtPrivateInfo" />
+            app:layout_constraintTop_toBottomOf="@+id/txtPrivateInfo"
+            tools:ignore="Autofill" />
 
         <TextView
             android:id="@+id/txtLogin"
             android:layout_width="@dimen/width_324"
             android:layout_height="@dimen/height_52"
             android:layout_marginTop="@dimen/margin_top_20"
-            android:background="@drawable/custum_button"
+            android:background="@drawable/custom_button"
             android:gravity="center"
             android:text="@string/textview_login"
             android:textColor="@color/color_white"
@@ -131,6 +137,7 @@
             app:layout_constraintTop_toBottomOf="@+id/txtLogin" />
 
         <TextView
+            android:id="@+id/txtCreateAccount"
             android:layout_width="@dimen/width_152"
             android:layout_height="@dimen/heigth_56"
             android:layout_marginTop="@dimen/margin_top_20"
