--- a/app/src/at-hauha/res/layout/fragment_profile.xml
+++ b/app/src/at-hauha/res/layout/fragment_profile.xml
@@ -1,30 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="0dp">
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/imgAvatar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:layout_width="96dp"
+            android:layout_height="96dp"
             android:layout_marginTop="@dimen/margin_top_20"
             android:src="@drawable/avatar"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txtEditProfile" />
+            app:layout_constraintTop_toBottomOf="@+id/txtEditProfile"
+            tools:ignore="RedundantNamespace" />
 
         <TextView
             android:id="@+id/txtEditProfile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_top_20"
-            android:text="Edit Profile"
+            android:text="@string/textview_edit_profile"
             android:textColor="@color/color_black"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -40,7 +43,8 @@
             android:layout_marginStart="@dimen/margin_start_40dp"
             android:layout_marginTop="@dimen/height_64"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="UseCompoundDrawables">
 
             <ImageView
                 android:src="@drawable/ic_chevron_left_black_24dp"
@@ -52,7 +56,7 @@
                 android:layout_height="@dimen/margin_top_16"
                 android:gravity="center"
                 android:src="@drawable/logo"
-                android:text="Back to Profile" />
+                android:text="@string/textview_back_to_profile" />
         </LinearLayout>
 
 
@@ -62,7 +66,7 @@
             android:layout_height="@dimen/height_24"
             android:layout_marginTop="@dimen/margin_top_20"
             android:gravity="center"
-            android:text="Edit Profle Picture"
+            android:text="@string/textview_edit_profle_picture"
             android:textColor="@color/color_green"
             android:textSize="16dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -75,20 +79,23 @@
             android:layout_width="@dimen/margin_top_68"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/margin_start_40dp"
-            android:text="Full Name"
+            android:text="@string/textview_full_name"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txtEditProfilePicture" />
 
         <EditText
+            android:hint="@string/edit_hint_your_name"
             android:id="@+id/editFullName"
             android:layout_width="@dimen/width_348"
             android:layout_height="@dimen/height_48"
-            android:text="Nich Evans"
+            android:text="@string/edittext_nich_evans"
             android:textSize="16sp"
+            android:inputType="text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.634"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txtFullName" />
+            app:layout_constraintTop_toBottomOf="@+id/txtFullName"
+            tools:ignore="Autofill"/>
 
         <TextView
             android:id="@+id/txtBio"
@@ -96,20 +103,23 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="40dp"
             android:layout_marginTop="@dimen/margin_top_20"
-            android:text="Bio"
+            android:text="@string/textview_bio"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editFullName" />
 
         <EditText
+            android:inputType="text"
+            android:hint="@string/edittext_hint_bio"
             android:id="@+id/edtBio"
             android:layout_width="@dimen/width_348"
             android:layout_height="@dimen/height_48"
-            android:text="Potato Master"
+            android:text="@string/edittext_potato_master"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.634"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txtBio" />
+            app:layout_constraintTop_toBottomOf="@+id/txtBio"
+            tools:ignore="Autofill" />
 
         <TextView
             android:id="@+id/txtPrivateInfo"
@@ -117,7 +127,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/margin_start_40dp"
             android:layout_marginTop="@dimen/margin_top_20"
-            android:text="Private Infomation"
+            android:text="@string/textview_private_infomation"
             android:textColor="@color/color_black"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -129,20 +139,23 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/margin_start_40dp"
             android:layout_marginTop="@dimen/margin_top_20"
-            android:text="Email"
+            android:text="@string/textview_email"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txtPrivateInfo" />
 
         <EditText
+            android:inputType="textEmailAddress"
+            android:hint="@string/edittext_hint_email_address"
             android:id="@+id/edtEmail"
             android:layout_width="@dimen/width_348"
             android:layout_height="@dimen/height_48"
-            android:text="user@gmail.com"
+            android:text="@string/edittext_user_email_com"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.634"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txtEmail" />
+            app:layout_constraintTop_toBottomOf="@+id/txtEmail"
+            tools:ignore="Autofill" />
 
         <TextView
             android:id="@+id/txtPhone"
@@ -150,20 +163,23 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/margin_start_40dp"
             android:layout_marginTop="@dimen/margin_top_20"
-            android:text="Phone"
+            android:text="@string/textview_phone"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/edtEmail" />
 
         <EditText
+            android:hint="@string/edittext_hint_input_phone_number"
+            android:inputType="phone"
             android:id="@+id/edtPhone"
             android:layout_width="@dimen/width_348"
             android:layout_height="@dimen/height_48"
-            android:text="+1 234 567 89"
+            android:text="@string/edittext_1_234_567_89"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.634"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txtPhone" />
+            app:layout_constraintTop_toBottomOf="@+id/txtPhone"
+            tools:ignore="Autofill" />
 
         <TextView
             android:id="@+id/editSaveProfile"
@@ -171,9 +187,9 @@
             android:layout_height="@dimen/height_48"
             android:layout_marginStart="@dimen/margin_start_40dp"
             android:layout_marginTop="@dimen/margin_top_20"
-            android:background="@drawable/custum_button"
+            android:background="@drawable/custom_button"
             android:gravity="center"
-            android:text="Save Profile"
+            android:text="@string/textview_save_profile"
             android:textColor="@color/color_white"
             android:textSize="16sp"
             android:layout_marginBottom="30dp"
