--- a/app/src/at-hauha/res/layout/fragment_registry.xml
+++ b/app/src/at-hauha/res/layout/fragment_registry.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="0dp">
 
         <ImageView
             android:id="@+id/imgBackGround"
@@ -47,7 +48,7 @@
             android:layout_width="wrap_content"
             android:layout_height="@dimen/height_24"
             android:layout_marginTop="@dimen/margin_top_20"
-            android:text="@string/textview_create_account_to_countinue"
+            android:text="@string/textview_create_account_to_continue"
             android:textSize="@dimen/text_size_14"
             app:layout_constraintStart_toStartOf="@+id/txtBack"
             app:layout_constraintTop_toBottomOf="@+id/imgBackGround" />
@@ -63,6 +64,8 @@
             app:layout_constraintTop_toBottomOf="@+id/txtContinue" />
 
         <EditText
+            android:inputType="text"
+            android:hint="@string/edit_hint_your_name"
             android:id="@+id/editFullName"
             android:layout_width="@dimen/width_324"
             android:layout_height="@dimen/height_64"
@@ -70,7 +73,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.465"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txtFullName" />
+            app:layout_constraintTop_toBottomOf="@+id/txtFullName"
+            tools:ignore="Autofill" />
 
         <TextView
             android:id="@+id/txtBio"
@@ -83,6 +87,8 @@
             app:layout_constraintTop_toBottomOf="@+id/editFullName" />
 
         <EditText
+            android:inputType="textEmailAddress"
+            android:hint="@string/edittext_hint_email_address"
             android:id="@+id/edtEmail"
             android:layout_width="@dimen/width_324"
             android:layout_height="@dimen/height_64"
@@ -90,7 +96,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.465"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txtBio" />
+            app:layout_constraintTop_toBottomOf="@+id/txtBio"
+            tools:ignore="Autofill" />
 
 
         <TextView
@@ -104,6 +111,7 @@
             app:layout_constraintTop_toBottomOf="@+id/edtEmail" />
 
         <EditText
+            android:hint="@string/edittext_hint_password"
             android:id="@+id/edtPassword"
             android:layout_width="@dimen/width_324"
             android:layout_height="@dimen/height_64"
@@ -113,14 +121,15 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.465"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txtPrivateInfo" />
+            app:layout_constraintTop_toBottomOf="@+id/txtPrivateInfo"
+            tools:ignore="Autofill" />
 
         <TextView
             android:id="@+id/txtCreateAccount"
             android:layout_width="@dimen/width_324"
             android:layout_height="@dimen/height_52"
             android:layout_marginTop="@dimen/margin_top_20"
-            android:background="@drawable/custum_button"
+            android:background="@drawable/custom_button"
             android:gravity="center"
             android:text="@string/textview_create_account"
             android:textColor="@color/color_white"
